--- a/config/messages_en_US.properties
+++ b/config/messages_en_US.properties
@@ -1,4 +1,4 @@
-#Sat Dec 19 14:42:20 UTC 2020
+#Wed May 10 15:32:49 IST 2023
 PDFX008W=Font definition not found for the logical name or alias ''{0}''.
 DOTX064W=The copy-to attribute [copy-to\="{0}"] uses the name of a file that already exists, so this attribute is ignored.
 DOTX025E=Missing linktext and navtitle for non-DITA resource "{0}". References must provide a local navigation title when the target is not a local DITA resource.
@@ -160,7 +160,7 @@ DOTX067E=No string named ''{0}'' was found for language ''{1}''. Add a mapping f
 DOTJ007E=Duplicate condition in filter file for rule ''{0}''. The first encountered condition will be used.
 DOTX070W=Target "{0}" is deprecated. Remove references to this target from your custom Ant files.
 DOTX031E=The file {0} is not available to resolve link information.
-DOTA001F="{0}" is not a recognized transformation type. Supported transformation types are dita, eclipsehelp, html5, htmlhelp, markdown, markdown_gitbook, markdown_github, pdf, pdf2, xhtml.
+DOTA001F="{0}" is not a recognized transformation type. Supported transformation types are dita, eclipsehelp, html5, htmlhelp, markdown, markdown_gitbook, markdown_github, pdf, pdf2, print-pdf, xhtml.
 DOTX050W=Default id "org.sample.help.doc" is used for Eclipse plug-in. If you want to use your own plug-in id, please specify it using the id attribute on your map.
 DOTJ066E=No id attribute on topic type element {0}. Using generated id {1}.
 DOTJ030I=No ''class'' attribute for was found for element ''<{0}>''. The element will be processed as an unknown or non-DITA element.
